:ambulance:!HOTFIX: update mypage js adn detail page js

--- a/mypage.html
+++ b/mypage.html
@@ -52,117 +52,46 @@
                 <img id="user-image" class="profile" src="/img/richmaker-logo.png" />
               </div>
             </div>
-<<<<<<< HEAD
-          </div>
-          <div class="numbers">
-            <a href="/updatemypage.html">
-              <button type="button" class="update" id="ProfileButton">프로필 수정</button>
-            </a>
-            <p>Email: <span id="user-email"></span></p>
-            <p>Username: <span id="user-name"></span></p>
-            <div class="item" id="user-bio">
-              bio
-=======
             <div class="numbers">
-              <button type="button" class="update" id="updateUserProfileButton">
-                이미지 편집
-              </button>
-              <p>Email: <span id="user-email"></span></p>
+              <a href="/updatemypage.html">
+                <button type="button" class="update" id="updateUserProfileButton">
+                  프로필 편집
+                </button>
+              </a>
+              <p> <span id="user-email"></span></p>
 
               <!-- <div class="item">
               email@example.com
             </div> -->
-              <p>Username: <span id="user-name"></span></p>
+              <p> <span id="user-name"></span></p>
 
               <!-- <div class="item">
               username
             </div> -->
 
               <div class="item" id="user-bio">bio</div>
->>>>>>> b92f6ff2e7ed00405f70881681d264c600d4ba37
             </div>
           </div>
         </div>
-<<<<<<< HEAD
-      </div>
-      <div class="modal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-=======
         <!-- 진행중인 챌린지 -->
         <div class="consumecontainer">
           <p>내 챌린지 관리</p>
           <hr class="line" />
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="slider"></div>
->>>>>>> b92f6ff2e7ed00405f70881681d264c600d4ba37
           </div>
         </div>
 
       </div>
-      <div class="consumecontainer">
-        <p>내 챌린지 관리</p>
-        <!-- <hr class="line"> -->
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col" id="bookmark_box">
-            <div class="new-challenge">
-              <div class="main-nav">
-                <span class="new-challenge-count"></span>
-                <div class="button-cover">
-                  <a href="/list.html?query=new">+</a>
-                </div>
-              </div>
-              <!-- <hr class="bar"> -->
-              <section>
-                <div class="new-card-container">
-                  <div class="slider">
 
-                  </div>
-                  <div class="prev"><i class="fa-solid fa-angle-right prev-arrow"></i></div>
-                  <div class="next"><i class="fa-solid fa-angle-right"></i></div>
-                </div>
-              </section>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- 좋아요 누른 첼린지 -->
       <div class="myinterestingchallenge">
         <p class="myinteresting">관심있는 챌린지</p>
         <hr class="line2" />
         <div class="row row-cols-1 row-cols-md-3 g-4">
-<<<<<<< HEAD
-          <div class="col" id="bookmark_box">
-            <div class="new-challenge">
-              <div class="main-nav">
-                <span class="new-challenge-count"></span>
-                <div class="button-cover">
-                  <a href="/list.html?query=new">+</a>
-                </div>
-              </div>
-              <hr class="bar">
-              <section>
-                <div class="new-card-container">
-                  <div class="slider slider_box">
-
-                  </div>
-                  <div class="prev"><i class="fa-solid fa-angle-right prev-arrow"></i></div>
-                  <div class="next"><i class="fa-solid fa-angle-right"></i></div>
-                </div>
-              </section>
-=======
           <div class="col">
-            <div class="card h-100" style="border-radius: 10px">
+            <div class="slider_2"></div>
+            <!-- <div class="card h-100" style="border-radius: 10px">
               <div class="imagebox2">
                 <div class="box" style="background: rgba(231, 57, 34, 0.322)">
                   <img class="profile" src="/img/richmaker-logo.png" />
@@ -178,14 +107,11 @@
               </div>
               <div class="card-footer">
                 <small class="text-body-secondary">목표 금액</small>
-              </div>
->>>>>>> b92f6ff2e7ed00405f70881681d264c600d4ba37
-            </div>
+              </div> -->
           </div>
         </div>
-
-
       </div>
+  </div>
   </div>
   <div class="container">
     <hr class="line2">
