--- a/mypage.html
+++ b/mypage.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
   <link rel="stylesheet" href="./css/index.css" />
-  <link rel="stylesheet" href="./css/index2.css" />
+  <link rel="stylesheet" href="./css/index3.css" />
   <link rel="stylesheet" href="./css/module.css" />
   <link rel="stylesheet" href="./css/mypage.css" />
 
@@ -77,9 +77,12 @@
         <div class="consumecontainer">
           <p>내 챌린지 관리</p>
           <hr class="line" />
-          <div class="row row-cols-1 row-cols-md-3 g-4">
+          <!-- <div class="prev"><i class="fa-solid fa-angle-right prev-arrow"></i></div>
+          <div class="next"><i class="fa-solid fa-angle-right"></i></div> -->
+          <div class="new-card-container">
             <div class="slider"></div>
           </div>
+
         </div>
 
       </div>
@@ -88,10 +91,9 @@
       <div class="myinterestingchallenge">
         <p class="myinteresting">관심있는 챌린지</p>
         <hr class="line2" />
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="slider_2"></div>
-            <!-- <div class="card h-100" style="border-radius: 10px">
+        <div class="row row-cols-1 row-cols-md-3 g-4 addAAA">
+          <div class="slider_2"></div>
+          <!-- <div class="card h-100" style="border-radius: 10px">
               <div class="imagebox2">
                 <div class="box" style="background: rgba(231, 57, 34, 0.322)">
                   <img class="profile" src="/img/richmaker-logo.png" />
@@ -108,7 +110,6 @@
               <div class="card-footer">
                 <small class="text-body-secondary">목표 금액</small>
               </div> -->
-          </div>
         </div>
       </div>
   </div>
@@ -480,7 +481,26 @@
   <script type="module" src="/js/conf.js"></script>
   <script type="module" src="/js/api.js"></script>
   <script type="module" src="/js/mypage.js"></script>
-
+  <script>
+    /* Slider */
+    const next = document.querySelectorAll(".next");
+    const prev = document.querySelectorAll(".prev");
+    const slider = document.querySelectorAll(".slider");
+    for (let i = 0; i < slider.length; i++) {
+      makeSlider(slider[i], prev[i], next[i]);
+    }
+    function makeSlider(element, prev, next) {
+      next.addEventListener("click", () => {
+        const offsetX = element.offsetWidth;
+        element.scrollBy(offsetX, 0);
+      });
+      prev.addEventListener("click", () => {
+        const offsetX = element.offsetWidth;
+        element.scrollBy(-offsetX, 0);
+      });
+    }
+        /* Slider end */
+  </script>
   <!-- script end -->
 </body>
 
