--- a/nav.html
+++ b/nav.html
@@ -26,5 +26,7 @@
     <li><a id="dropDownMenu_2" href="challengepost.html">챌린지 작성하기</a></li>
     <li><a id="dropDownMenu_3" href="mypage.html">마이페이지</a></li>
     <li><a id="dropDownMenu_4" href="updateUserInfo.html">회원 정보 수정</a></li>
+    <li><a href="login_test.html">login_test</a></li>
+    <li><a href="test.html">test</a></li>
   </ul>
 </div>
